name:                phim
version:             0.1.0
synopsis:            The Vim of Photo Managers
-- description:
homepage:            https://github.com/Ziphilt/phim
license:             GPL-2
license-file:        LICENSE
author:              Caleb Stepanian
maintainer:          Caleb Stepanian
-- copyright:
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable phim
  main-is:             phim.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:
  default-language:    Haskell2010
